--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://images.unsplash.com/profile-1699335298817-ebf4fa0caf36image?ixlib=imgixjs-3.3.2&crop=faces&fit=crop&w=200&h=200">
       <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
    </head>
    <body>
       <div class="wrapper">
