--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
                <div class="title">
                   Mahmoud El Sheikh
                </div>
-               <p>
-                Student in secondary school <br>front-end developer
+               <p> 
+                  <br> ❤❤S ❤❤
+               <br> ✨curva sud✨
+               <br>🤍Madrid 🤍
+               <br>✨Cristiano Ronaldo ✨
+               <br>1911
+
+
                </p>
             </div>
             <ul>
