--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                   Mahmoud El Sheikh
                </div>
                <p> 
-                  <br> ❤❤ S ❤❤🇦🇹Zamalek🇦🇹
+                  <br> ❤❤ S ❤❤
+                  <br>🇦🇹Zamalek🇦🇹
 
                   <br> 
                <br> ✨curva sud✨
