--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
                <p> 
                   <br> ❤❤ S ❤❤
                   <br>🇦🇹Zamalek🇦🇹
-
-                  <br> 
                <br> ✨curva sud✨
                <br>🤍Madrid 🤍
                <br>✨Cristiano Ronaldo ✨
@@ -41,7 +39,13 @@
                <a href="https://wa.me/+201000808325"><i class="fab fa-whatsapp"></i></a> 
                <a href="https://t.me/mahmoud_elsheikh_Zsc"><i class="fab fa-telegram"></i></a>
             </ul>
-         </div>
+            <p>↓↓</p>
+         <ul>
+            <a href="https://mahmoudelsheikh7.github.io/web2/"><i class="fab heart"></i></a>
+         </ul>
+         <p>Copyright © 2023 Mahmoudelsheikh®</p>
+      </div>
+         
       </div>
    </body>
 </html>
