--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
                </div>
                <p> 
                   <br> ❤❤ S ❤❤
-                  <br>🇦🇹Zamalek🇦🇹
-               <br> ✨curva sud✨
+                  <br>🇦🇹Zamalek🇦🇹1911
                <br>🤍Madrid 🤍
                <br>✨Cristiano Ronaldo ✨
-               <br>1911
-
+               
 
                </p>
             </div>
