--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
          <ul>
             <a href="https://mahmoudelsheikh7.github.io/web2/"><i class="fab heart"></i></a>
          </ul>
-         <p>Copyright © 2023 Mahmoudelsheikh®</p>
+         <p>p>
+            <h6>Copyright © 2023 Mahmoudelsheikh®</h6>
       </div>
          
       </div>
