--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8">
       <title>Mahmoud El Sheikh</title>
       <link rel="website icon"
-      href="https://images.unsplash.com/profile-1699335298817-ebf4fa0caf36image?ixlib=imgixjs-3.3.2&crop=faces&fit=crop&w=200&h=200">
+      href="anthony.jpg">
       <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -13,10 +13,10 @@
    <body>
       <div class="wrapper">
          <div class="card front-face">
-            <img src="https://images.unsplash.com/photo-1692964729354-18d6a27e6d87?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+            <img src="HGE.jpg">
          </div>
          <div class="card back-face">
-            <img srcset="https://images.unsplash.com/profile-1699335298817-ebf4fa0caf36image?ixlib=imgixjs-3.3.2&crop=faces&fit=crop&w=200&h=200"  >
+            <img srcset="anthony.jpg"  >
             <div class="info">
                <div class="title">
                   Mahmoud El Sheikh
