--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <body>
       <div class="wrapper">
          <div class="card front-face">
-            <img src="HGE.jpg">
+            <img src="HGE.png">
          </div>
          <div class="card back-face">
             <img srcset="anthony.jpg"  >
