--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="HGE.png">
          </div>
          <div class="card back-face">
-            <img srcset="anthony.jpg"  >
+            <img srcset="mahmoud.jpg"  >
             <div class="info">
                <div class="title">
                   Mahmoud El Sheikh
@@ -24,7 +24,7 @@
                <p> 
                   <br> ❤❤ S ❤❤
                   <br>🇦🇹Zamalek🇦🇹
-               <br> ✨curva sud✨
+               <br> ✨ZSC✨
                <br>🤍Madrid 🤍
                <br>✨Cristiano Ronaldo ✨
                <br>1911
