--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p>↓↓</p>
          <ul>
             <a href="https://mahmoudelsheikh7.github.io/web2/"><i class="fab heart"></i></a>
-            <a href="https://mahmoudelsheikh7.github.io/pweb4/"><i class="fab heart"></i>MS</a>
+            <a href="https://mahmoudelsheikh7.github.io/M4S/"><i class="fab heart"></i>M4S</a>
          </ul>
          <p>Copyright © 2025 Mahmoudelsheikh®</p>
       </div>
